# avionics

./: README.md  TODO.md
electronics/datasheets/sensor-board/: MCP96RL01T_array_thermo.kicad_sch  fp-lib-table  lmc6036_pressure_1.kicad_sch  lmc6036_pressure_2.kicad_sch  lmc6036_pressure_SPARE.kicad_sch  max44252_loadcells.kicad_sch  sensor-board.kicad_pro  sensor-board.kicad_sch
electronics/datasheets/sensor-board/gerbers/: sensor-board-B_Paste.gbr  sensor-board-Edge_Cuts.gbr  sensor-board-F_Mask.gbr  sensor-board-F_Paste.gbr  sensor-board-In1_Cu.gbr  sensor-board-PTH.drl
electronics/libraries/BSS806N (MOSFET)/: 2021-09-18_15-04-13.kicad_sym  2021-09-18_15-04-13.lib
electronics/libraries/BSS806N (MOSFET)/footprints.pretty/: BSS806NEH6327XTSA1.kicad_mod
electronics/libraries/BUK9Y25-60E (MOSFET)/: 2021-10-14_00-54-29.kicad_sym  2021-10-14_00-54-29.lib
electronics/libraries/BUK9Y25-60E (MOSFET)/footprints.pretty/: BUK9Y21-40E.kicad_mod
electronics/libraries/Button CS1102/footprints.pretty/: Button CS1102.kicad_mod
electronics/libraries/CustomFootprints.pretty/: 3mm hole.kicad_mod  LatchingConnector2POS.kicad_mod  PowerPoleThroughHole.kicad_mod  RGB LED.kicad_mod  seds-logo-2.kicad_mod  seds-logo-back-2.kicad_mod  seds-logo-back.kicad_mod  seds-logo.kicad_mod
electronics/libraries/CustomFootprints.pretty/.svg2shenzhen-cache/: export_options.pickle  g53-F.SilkS-export-true.hash
electronics/libraries/Custom_Molex_SL_2.54/Custom_Molex_SL_2.54.pretty/: SL_2.54_H_2pin.kicad_mod  SL_2.54_H_4pin.kicad_mod
electronics/libraries/IC_Murata_MYSGK02506BRSR/: MYSGK02506BRSR.lib  eec.dcm
electronics/libraries/K_type_thermo_conn_F.pretty/: K_type_thermo_conn_F.kicad_mod  K_type_thermo_conn_F.kicad_sym
electronics/libraries/LMC6036/: LMC6036_custom.kicad_sym
electronics/libraries/LMC6036/SOP65P640X120-14N/: SOP65P640X120-14N.kicad_mod
electronics/libraries/MAX33012EASA+/: MAX33012EASA+.kicad_sym  MAX33012EASA+.lib
electronics/libraries/MAX33014E/: 2022-03-14_22-38-09.kicad_sym  2022-03-14_22-38-09.lib
electronics/libraries/MAXM17634AMG+/: MAXM17634AMG+.kicad_sym  MAXM17634AMG+.lib
electronics/libraries/MCP96RL01T/: MCP96RL01T.kicad_sym
electronics/libraries/PS1420P02CT/: 2022-03-20_17-02-20.lib
electronics/libraries/ul_DMMT5401-7-F/: DMMT5401-7-F.lib  SOT_5401-7-F_DIO.step
electronics/libraries/ul_MYMGA5R04RELA5RA/: MYMGA5R04RELA5RA.lib
electronics/mcu-base/: fp-lib-table  mcu-base.kicad_prl  mcu-base.kicad_pro  mcu-base.kicad_sch  sym-lib-table
electronics/output-board/: #auto_saved_files#  fp-lib-table  output-board BOM.xlsx  output-board.kicad_pcb  output-board.kicad_prl  output-board.kicad_pro  output-board.kicad_sch  sym-lib-table  untitled.kicad_sch
electronics/output-board/gerbers/: output-board-B_Cu.gbr  output-board-B_Mask.gbr  output-board-B_Paste.gbr  output-board-B_Silkscreen.gbr  output-board-Edge_Cuts.gbr  output-board-F_Cu.gbr  output-board-F_Mask.gbr  output-board-F_Paste.gbr  output-board-F_Silkscreen.gbr  output-board-In1_Cu.gbr  output-board-In2_Cu.gbr  output-board-NPTH-drl_map.gbr  output-board-NPTH.drl  output-board-PTH-drl_map.gbr  output-board-PTH.drl  output-board-job.gbrjob
electronics/raspi-hat/: 12V_to_5V.kicad_sch  24V_to_12V.kicad_sch  fp-lib-table  raspi-hat.kicad_pcb  raspi-hat.kicad_prl  raspi-hat.kicad_pro  raspi-hat.kicad_sch  sym-lib-table
electronics/raspi-hat/gerbers/: raspi-hat-B_Cu.gbr  raspi-hat-B_Mask.gbr  raspi-hat-B_Silkscreen.gbr  raspi-hat-Edge_Cuts.gbr  raspi-hat-F_Cu.gbr  raspi-hat-F_Mask.gbr  raspi-hat-F_Paste.gbr  raspi-hat-F_Silkscreen.gbr  raspi-hat-In1_Cu.gbr  raspi-hat-In2_Cu.gbr  raspi-hat-NPTH-drl_map.gbr  raspi-hat-NPTH.drl  raspi-hat-PTH-drl_map.gbr  raspi-hat-PTH.drl  raspi-hat-job.gbrjob
electronics/sensor-board/: #auto_saved_files#  MCP96RL01T_array_thermo.kicad_sch  OLD DESIGN sensor-board.kicad_sch  OLD_sensor-board.kicad_prl  OLD_sensor-board.kicad_pro  fp-lib-table  lmc6036_pressure-flow_3.kicad_sch  lmc6036_pressure_1.kicad_sch  lmc6036_pressure_2.kicad_sch  lmc6036_pressure_SPARE.kicad_sch  makeProjectedPlanarWire.x_t  max44252_loadcell1.kicad_sch  max44252_loadcell2.kicad_sch  max44252_loadcells.kicad_sch  max44252_loadcells_3.kicad_sch  max44252_thermocouple_1.kicad_sch  max44252_thermocouple_2.kicad_sch  mounting.SLDPRT  op_amp_array_1.kicad_sch  op_amp_array_2.kicad_sch  op_amp_array_3.kicad_sch  op_amp_array_4.kicad_sch  op_amp_array_5.kicad_sch  op_amp_array_6_lmc6036.kicad_sch  sensor-board BOM OLD.xlsx  sensor-board BOM.xlsx  sensor-board.kicad_pcb  sensor-board.kicad_prl  sensor-board.kicad_pro  sensor-board.kicad_sch  sym-lib-table  ~$sensor-board BOM.xlsx
electronics/sensor-board/gerbers/: sensor-board-B_Cu.gbr  sensor-board-B_Mask.gbr  sensor-board-B_Silkscreen.gbr  sensor-board-F_Cu.gbr  sensor-board-F_Silkscreen.gbr  sensor-board-In2_Cu.gbr  sensor-board-NPTH-drl_map.gbr  sensor-board-NPTH.drl  sensor-board-PTH-drl_map.gbr  sensor-board-job.gbrjob
software/: avionics - Shortcut.lnk
software/ads114s08/: Cargo.toml
software/ads114s08/src/: consts.rs  lib.rs
software/mcp96x/: Cargo.toml
software/mcp96x/src/: k_type.rs  lib.rs
software/output-board/: Cargo.toml
software/output-board/.cargo/: config.toml
software/output-board/src/: main.rs
software/output-board/testsuite/tests/: test.rs
software/pi/: Cargo.toml
software/pi-controller-demo/: Cargo.toml  valve_sequences.json
software/pi-controller-demo/can-receiver/: Cargo.toml  build.rs
software/pi-controller-demo/can-receiver/src/: ioprio.h  linux_utils.c  main.rs
software/pi-controller-demo/mock-can-driver/: Cargo.toml
software/pi/src/: boards.rs  can.rs  ground_station.rs  main.rs
software/pi/src/boards/: output.rs  sensor.rs
software/sensor-board/: Cargo.toml
software/sensor-board/.cargo/: config.toml
software/sensor-board/src/: defmt_setup.rs  hx711.rs  main.rs  readings.rs  util.rs
software/sensor-board/testsuite/: Cargo.toml
software/sensor-board/testsuite/src/: lib.rs
software/shared/: Cargo.toml
software/shared/src/: lib.rs  pi_output.rs  pi_sensor.rs  valve.rs
(+29 files in other folders)
