[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "=0.3.0"
modular-bitfield = "0.11.2"
postcard = { git = "https://github.com/lachlansneff/postcard.git", branch = "max-serialization-size" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
