[package]
name = "can-receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
shared = { path = "../../shared" }
postcard = { git = "https://github.com/lachlansneff/postcard.git", branch = "max-serialization-size" }
libc = "0.2"
socketcan = "1.7.0"
websocket = "0.26.2"
# tokio = { version = "1", features = ["full"] }
# warp = "0.3"
# futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
